# eFinOps

./:  requirements.txt  E-FinOps 框架.md  README.md  efinops_app.py  pyproject.toml
.devcontainer/: devcontainer.json
