[project]
name = "efinops_app"
version = "0.1.0"
description = "A Streamlit app for E-FinOps investment analysis."
authors = [
    {name = "Chris Han", email = "chrishan_ca@outlook.com"}
]
dependencies = [
    "streamlit==1.45.0",
    "numpy-financial==1.0.0",
    "numpy==2.0.1",
    "pandas==2.2.3",    
]

requires-python = ">=3.9,<3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
